<resources>
    <string name="app_name">LessonFragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>\
    <string name="home">Ana səhifə</string>
    <string name="details">Detallar</string>
    <string name="add">Əlavə et</string>
    <string name="products">Urunler\n</string>
    <string name="product_name">Urun adi</string>
    <string name="product_code">Urun kodu</string>
    <string name="product_description">Urun tanimlamasi</string>
    <string name="profile">Hesabım</string>
    <string name="back">Geri</string>
</resources>